--- a/index.html
+++ b/index.html
@@ -54,14 +54,14 @@
         </div>
 
         <div class="home-img">
-            <img src="images/Violet1.jpg" alt="">
+            <img src="images/Violet2.jpg" alt="">
         </div>
     </section>
 
     <!-- about section design -->
     <section class="about" id="about">
         <div class="about-img">
-            <img src="images/Violet2.jpg" alt="Error">
+            <img src="images/me.jpg" alt="Error">
         </div>
 
         <div class="about-content">
