--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                 <img src="images/Pong.png" alt="">
                 <div class="project-layer">
                     <h4>Pong Game</h4>
-                    <a href="#"><i class='bx bx-link-external' ></i></a>
+                    <a href="https://github.com/HikaruYo/PongGame"><i class='bx bx-link-external' ></i></a>
                 </div>
             </div>
 
@@ -108,15 +108,15 @@
                 <img src="images/Pong2.png" alt="">
                 <div class="project-layer">
                     <h4>Pong 2 Player</h4>
-                    <a href="#"><i class='bx bx-link-external' ></i></a>
+                    <a href="https://github.com/HikaruYo/PONG_2_Player"><i class='bx bx-link-external' ></i></a>
                 </div>
             </div>
 
             <div class="project-box">
                 <img src="images/ToDoList.png" alt="">
                 <div class="project-layer">
-                    <h4>To Do List</h4>
-                    <a href="http://listme.rf.gd/?i=1"><i class='bx bx-link-external' ></i></a>
+                    <h4>Calendar</h4>
+                    <a href="https://hikaru-calender.vercel.app/"><i class='bx bx-link-external' ></i></a>
                 </div>
             </div>
 
