--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
             </div>
 
             <div class="project-box">
-                <img src="images/ToDoList.png" alt="">
+                <img src="images/Calender.png" alt="">
                 <div class="project-layer">
                     <h4>Calendar</h4>
                     <a href="https://hikaru-calender.vercel.app/"><i class='bx bx-link-external' ></i></a>
