--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                 <img src="images/Pong.png" alt="">
                 <div class="project-layer">
                     <h4>Pong Game</h4>
-                    <a href="https://github.com/HikaruYo/PongGame"><i class='bx bx-link-external' ></i></a>
+                    <a href="https://github.com/HikaruYo/PongGame" target="_blank"><i class='bx bx-link-external' ></i></a>
                 </div>
             </div>
 
@@ -108,7 +108,7 @@
                 <img src="images/Pong2.png" alt="">
                 <div class="project-layer">
                     <h4>Pong 2 Player</h4>
-                    <a href="https://github.com/HikaruYo/PONG_2_Player"><i class='bx bx-link-external' ></i></a>
+                    <a href="https://github.com/HikaruYo/PONG_2_Player" target="_blank"><i class='bx bx-link-external' ></i></a>
                 </div>
             </div>
 
@@ -116,7 +116,7 @@
                 <img src="images/Calender.png" alt="">
                 <div class="project-layer">
                     <h4>Calendar</h4>
-                    <a href="https://hikaru-calender.vercel.app/"><i class='bx bx-link-external' ></i></a>
+                    <a href="https://hikaru-calender.vercel.app/" target="_blank"><i class='bx bx-link-external' ></i></a>
                 </div>
             </div>
 
@@ -124,7 +124,7 @@
                 <img src="images/Miku.png" alt="">
                 <div class="project-layer">
                     <h4>Mikutap <h6>(I do web scraping)</h6></h4>
-                    <a href="http://earnit.rf.gd"><i class='bx bx-link-external' ></i></a>
+                    <a href="http://earnit.rf.gd" target="_blank"><i class='bx bx-link-external' ></i></a>
                 </div>
             </div>
         </div>
