--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         <div class="about-content">
             <h2 class="heading">About <span>Me</span></h2>
             <h3>BackEnd Developer!</h3>
-            <p>My name is Adithya Prasetio Hutahaean, I was born in Semarang on January 29 2008. I am a BackEnd Developer and a Data Scientist. Currently I am studying at SMK Negeri 8 Semarang class 10 PPLG 1. My hobbies are watching anime, reading comics, and playing games. I also like workout and want to have an athletic body.</p>
+            <p>My name is Adithya Prasetio Hutahaean, I was born in Semarang on January 29 2008. I am a BackEnd Developer. Currently I am studying at SMK Negeri 8 Semarang class 10 PPLG 1. I love looking at the beautiful stars on a quiet night. My hobbies are watching anime, reading comics, and playing games. I also like workout and want to have an athletic body.</p>
             <!-- <a href="#" class="btn">Read More</a> -->
         </div>
     </section>
